fix review section alignment issue and its tag semantic meanings

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,10 +310,10 @@ nav h1 a {
 }
 
 #reviews-container {
-    padding: 15px 12px 80px;
+    padding: 15px 40px 80px;
 }
 
-#reviews-container h2 {
+#reviews-container h3 {
     color: #f58500;
     font-size: 24pt;
     font-weight: 300;
